기본 환경 구축 file 추가

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,1 +1,8 @@
+@import "bourbon";
+@import "./fonts";
+@import "./plugins/normalize.css";
+@import "./plugins/daterangepicker.css";
+@import "./plugins/swiper.css";
+@import "./plugins/prism.css";
+@import "./plugins/animate.css";
 @import "../../_modules/**/*.scss";
